# waza

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEMO-SCRIPT.md  DEPLOY.md  Dockerfile  IMPLEMENTATION.md  README.md  docker-compose.yml  pyproject.toml  suggestions.md
.github/: CODEOWNERS
.github/workflows/: ci.yaml  go-ci.yml  release.yaml  release.yaml.disabled  waza.yaml.disabled
azure-functions-eval/: eval.yaml  trigger_tests.yaml
azure-functions-eval/tasks/: task-001.yaml  task-002.yaml  task-003.yaml
docs/: GRADERS.md  IDE-EXTENSIONS.md  IDE-INTEGRATION-SUMMARY.md  IDE-INTEGRATION.md  INTEGRATION-TESTING.md  JSONRPC.md  PRD.md  RPC-PROTOCOL.md  SKILL-BEST-PRACTICES.md  TELEMETRY.md  TUTORIAL.md  WEB-DASHBOARD.md  WEB-UI.md
examples/: IDE-INTEGRATION-EXAMPLE.md  ide_integration_example.py
examples/azure-functions/: eval.yaml  trigger_tests.yaml
examples/azure-functions/tasks/: add-cosmosdb-binding.yaml  configure-app-settings.yaml  create-durable-function.yaml  create-http-function.yaml  create-queue-function.yaml  create-timer-function.yaml  deploy-with-azd.yaml  run-locally.yaml  setup-github-actions.yaml  troubleshoot-timeout.yaml
examples/code-explainer/: README.md  SKILL.md
examples/code-explainer/fixtures/: fetch_user.js  squares.py  user_orders.sql
examples/code-explainer/tasks/: explain-js-async.yaml  explain-list-comprehension.yaml  explain-python-recursion.yaml  explain-sql-join.yaml
skill_eval/: __init__.py  cli.py  generator.py  issues.py  runner.py  scanner.py
skill_eval/api/: __init__.py  auth.py  main.py  storage.py
skill_eval/api/routes/: __init__.py  config.py  evals.py  runs.py  skills.py
skill_eval/executors/: copilot.py
skill_eval/graders/: code_graders.py
skill_eval/schemas/: task.py
tests/: conftest.py  test_graders.py  test_issues.py  test_jsonrpc_protocol.py  test_jsonrpc_server.py  test_meta_eval.py  test_runner.py  test_scanner.py  test_schemas.py
tests/e2e/: test_web_ui.py
waza/: __init__.py  cli.py  generator.py  runner.py  telemetry.py
waza-go/: .gitignore  .golangci.yml  README.md  go.mod  go.sum
waza-go/cmd/waza/: main.go
waza-go/internal/execution/: copilot.go
waza-go/internal/models/: outcome.go  spec.go  spec_test.go  testcase.go
waza-go/internal/orchestration/: runner.go
waza-go/internal/scoring/: code_validators.go  validator.go
waza-runner/: SKILL.md
waza-runner/references/: EVAL-SPEC.md
waza/api/: __init__.py  auth.py  main.py  storage.py
waza/api/routes/: __init__.py  config.py  evals.py  runs.py  skills.py
waza/executors/: __init__.py  base.py  copilot.py  mock.py
waza/graders/: __init__.py  base.py  code_graders.py  human_graders.py  llm_graders.py
waza/jsonrpc/: __init__.py  methods.py  protocol.py  server.py  transports.py
waza/metrics/: __init__.py  behavior_quality.py  composite.py  task_completion.py  trigger_accuracy.py
waza/reporters/: __init__.py  json_reporter.py
waza/schemas/: __init__.py  eval_spec.py  results.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: EvalEditor.tsx  GenerateModal.tsx  Layout.tsx  RunConfigModal.tsx  TaskEditor.tsx
web/src/components/layout/: Layout.tsx
web/src/pages/: Dashboard.tsx  EvalDetail.tsx  Evals.tsx  EvalsList.tsx  RunDetail.tsx  RunDetails.tsx  Settings.tsx
web/src/types/: index.ts
